--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,13 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" style="background-image: linear-gradient(rgba(100,100,100,0.1),rgba(100,100,100,0.1)), url(https://images.unsplash.com/photo-1511671782779-c97d3d27a1d4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);">
+  <div class="container top-left offset-xs-6 offset-md-1">
+    <h1>Chante, chante, chante !</h1>
+    <p>Aprende o francês com musicas</p>
+    <div class="search-form-home">
+      <div class="row">
+        <div class="col-xs-12 col-md-4">
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
