--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -5,8 +5,8 @@
   background-size: cover !important;
   background-position: 10% 50%;
   position: relative;
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
+  // -webkit-transform: scaleX(-1);
+  // transform: scaleX(-1);
 }
 
 
@@ -21,8 +21,8 @@
   font-size: 50px;
   font-weight: bold;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
+  // -webkit-transform: scaleX(-1);
+  // transform: scaleX(-1);
 }
 .banner p {
   font-size: 25px;
@@ -30,8 +30,8 @@
   color: rgb(255, 255, 255);
   opacity: 0.9;
   margin-bottom: 30px;
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
+  // -webkit-transform: scaleX(-1);
+  // transform: scaleX(-1);
 }
 
 
