progress on the view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,12 @@
 @import "components/banner";
 @import "components/button";
 @import "pages/index";
+
+
+.center {
+  justify-content: center;
+}
+
+.spaceb {
+  justify-content: space-between;
+}
