--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,20 +1,13 @@
-<div class="banner" style="background-image: linear-gradient(rgba(100,100,100,0.1),rgba(100,100,100,0.1)), url(https://images.unsplash.com/photo-1511671782779-c97d3d27a1d4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);">
-  <div class="container offset-xs-6 offset-md-1">
+<div class="banner" style="background-image: linear-gradient(rgba(100,100,100,0.1),rgba(100,100,100,0.1)), url(https://images.unsplash.com/photo-1481828238384-55757d1249b8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1484&q=80);">
+  <div class="container-home offset-xs-6 offset-md-1">
     <h1>Chante, chante, chante !</h1>
-    <p>Aprende o francês com musicas</p>
-    <div class="search-form-home">
-      <div class="row">
-        <div class="col-xs-12 col-md-4">
-          <%= simple_form_for:search, url: songs_path, method: "GET", input_html: { class: "form-banner" } do |f| %>
+    <p>Aprende o francês com músicas</p>
+    <%= simple_form_for:search, url: songs_path, method: "GET", input_html: { class: "form-banner " } do |f| %>
 
-          <%= f.input :level, label: "Escolhe o seu nível em francês", label_html: { class: 'form-label' }, :collection => @levels %>
-          <%= f.input :style, label: "Escolhe o seu estilo favorito",label_html: { class: 'form-label' }, :collection => @styles %>
-          <%= f.button :submit, "Descobre a nossa sugestão de músicas", class: "btn-outline" %>
-          <% end %>
-
-        </div>
-      </div>
-    </div>
+    <%= f.input :level, label: "Escolhe o seu nível em francês", label_html: { class: 'form-label' }, :collection => @levels %>
+    <%= f.input :style, label: "Escolhe o seu estilo favorito",label_html: { class: 'form-label' }, :collection => @styles %>
+    <%= f.button :submit, "Descobre a nossa sugestão de músicas", class: "btn-outline" %>
+    <% end %>
   </div>
 </div>
-s
+
