--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,8 @@
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <% @levels = Level.all %>
           <% @levels.each do |level|  %>
-            <%= link_to level.name, songs_path, class: "dropdown-item" %>
+            <%= link_to level.name, songs_path(:level => level), class: "dropdown-item" %>
+
           <%end %>
           </div>
       </li>
@@ -27,7 +28,7 @@
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <% @styles = Style.all %>
           <% @styles.each do |style|  %>
-            <%= link_to style.name, songs_path, class: "dropdown-item" %>
+            <%= link_to style.name, songs_path(:style => style), class: "dropdown-item" %>
           <%end %>
            </div>
       </li>
