--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 @import "components/index";
 @import "components/banner";
 @import "components/button";
+@import "components/card";
 @import "pages/index";
 
 
