--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,69 +1,42 @@
-.card {
-  height: 175px;
-  color: white;
-  position: relative;
-  margin: 0.5em 0em;
-  border: 0px;
-  background-color: #FBFDFF
-}
-
-.card-image {
-  box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25);
-  width: 40%;
-  background-size: cover !important;
-  background-position: center;
-  border-radius: 0.25em 0em 0em 0.25em;
-  position: absolute;
-  top: 1px;
-  left: 1px;
-  height:100%
-}
-
-.card-infos {
-  box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 0em 0.25em 0.25em 0em;
-  position: absolute;
-  top: 1px;
-  left: 40%;
-  width: 60%;
-  color: #0C4E71;
-  height: 100%;
-}
-
-.card-details {
-  position: relative;
-  height: 100%;
-}
-.card-date {
-  position: absolute;
-  top: 0.5em;
-  left: 0.5em;
-  font-size: 15px;
-  text-transform: uppercase;
-}
-.card-name {
-  position: absolute;
-  top: 2em;
-  left: 0.5em;
-}
-.card-name h2 {
-  font-size: 24px;
-  text-overflow: ellipsis;
-}
-.card-name p {
-  font-size: 14px;
-  opacity: 0.7;
-  font-weight: lighter;
-}
-
-.card-events {
-  position: absolute;
-  bottom: 0.5em;
-  left: 0.5em;
-  text-overflow: ellipsis;
+.card-song {
   overflow: hidden;
-  white-space: nowrap;
-  max-width: 90%;
+  height: 120px;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+  margin-bottom: 1em;
+  transition: all .3s ease-in-out;
+}
+
+.card-song:hover {
+  transform: scale(1.005);
+  transition: all .2s linear;
+}
+
+
+.card-song img {
+  height: 100%;
+  width: 120px;
+  object-fit: cover;
+}
+
+.card-song h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.card-song p {
+  font-size: 12px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: 8px;
+}
+
+.card-song .card-song-infos {
+  padding: 16px;
 }
 
 .card-link {
@@ -76,17 +49,4 @@
   background: black;
   opacity: 0;
   border-radius: 1em;
-}
-.card-link:hover {
-  opacity: 0.05;
-}
-
-.my-race-image {
-  width: 30%;
-}
-
-
-.my-race-infos {
-  width: 70%;
-  left: 30%;
 }
