--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,13 @@
-.navbar-lewagon {
+.navbar-sing {
   justify-content: space-between;
   background: white;
+  color: #E84855;
 }
 
-.navbar-lewagon .navbar-collapse {
+.navbar-sing .navbar-collapse {
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
+.navbar-sing .navbar-brand img {
   width: 40px;
 }
