--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,6 @@
 .navbar-sing {
   justify-content: space-between;
-  background: white;
-  color: #E84855;
+  background: #FEEAFB;
 }
 
 .navbar-sing .navbar-collapse {
@@ -11,3 +10,5 @@
 .navbar-sing .navbar-brand img {
   width: 40px;
 }
+
+
