--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -51,3 +51,13 @@
 }
 
 
+#dropdown_home {
+    border-radius: 5em;
+    background-color: rgba(255, 255, 255, 0.3);
+    border: solid white 2px;
+}
+
+.placeholder-home::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color: rgb(255, 255, 255)!important;
+}
+
