--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,8 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-sing">
-  <%= link_to "#", class: "navbar-brand" do %>
-    <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
+  <%= link_to songs_path, class: "navbar-brand" do %>
+    <%= image_tag "https://res.cloudinary.com/dzxrdf9za/image/upload/v1588899994/Chante/poule.png" %>
+    <%= image_tag "https://res.cloudinary.com/dzxrdf9za/image/upload/v1588900356/Chante/poule_blanche.png" %>
+    <%= image_tag "https://res.cloudinary.com/dzxrdf9za/image/upload/v1588900356/Chante/poule_rouge.png" %>
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
