Improved design for mobile

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -6,6 +6,7 @@
     border-radius: 7px;
     text-align: center;
     font-size: 1.3em;
+    width: 100%;
     &:hover {
       background-color: rgba( 220, 220, 220, 0.5);
       color: white;
