--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,8 @@
     <%= image_tag "https://res.cloudinary.com/dzxrdf9za/image/upload/v1588900356/Chante/poule_rouge.png" %>
   <% end %>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+   <!-- Dropdown appearing on mobile only -->
+  <button id="burger-menu" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
 
   </button>
@@ -37,4 +38,7 @@
       </div>
     </div>
   </div>
+
+
+
 </div>
