--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <div class="row center">
+  <div class="row center text-align-center">
     <% if @songs.count > 1 %>
        <h1> Nos achamos <%= @songs.count %> músicas francesas legais para você...  </h1>
     <% elsif @songs.count == 1 %>
