--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -9,10 +9,10 @@
   transition: all .3s ease-in-out;
 }
 
-.card-song:hover {
-  transform: scale(1.005);
-  transition: all .2s linear;
-}
+// .card-song:hover {
+//   transform: scale(1.005);
+//   transition: all .2s linear;
+// }
 
 
 .card-song img {
