--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -2,11 +2,11 @@
 
   <div class="row center text-align-center">
     <% if @songs.count > 1 %>
-       <h1> Nos achamos <%= @songs.count %> músicas francesas legais para você...  </h1>
+       <h1> Nós achamos <%= @songs.count %> músicas francesas legais para você...  </h1>
     <% elsif @songs.count == 1 %>
-      <h1> Nos achamos <%= @songs.count %> música francesa legal para você...  </h1>
+      <h1> Nós achamos <%= @songs.count %> música francesa legal para você...  </h1>
     <% else %>
-        <h1> Nos não achamos nenhuma música para você...  </h1>
+        <h1> Nós não achamos nenhuma música para você...  </h1>
     <% end %>
 
   </div>
