added a footer and correct a typo on homepage

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Chante, chante, chante - Aprenda o francês con músicas</title>
+    <title>Chante, chante, chante - Aprenda o francês com músicas</title>
     <title><%= meta_title %></title>
     <meta name="description" content="<%= meta_description %>">
     <!-- Facebook Open Graph data -->
@@ -27,6 +27,9 @@
       <%= render 'shared/navbar' %>
     <% end %>
     <%= yield %>
+    <% unless current_page?(root_path) %>
+      <%= render 'shared/footer' %>
+    <% end %>
     <%= javascript_include_tag 'application' %>
 
     <%= javascript_pack_tag 'application' %>
