--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-sing {
   justify-content: space-between;
   background: #FEEAFB;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.1);
 }
 
 .navbar-sing .navbar-collapse {
